--- a/assets/css/style_formulario.css
+++ b/assets/css/style_formulario.css
@@ -10,10 +10,7 @@
 .background-forms{
     width: 100%;
     height: 100vh;
-    background-image: url("assets/img/image_formulario.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #0f37a7;
     display: flex;
     align-items: center;
     justify-content: center;
